tweaked page with text and logo outlines (css dropshadow, cool), some spacing issues. maybe I can leave it for the night? one thing left undone: that tiny ~5-10px gap under footer

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -121,12 +121,13 @@
     bottom: 0;
     height: auto;
     padding: 3em 2em 0em 3em;
-    background: hsla(33,100,3,.9);
+    background: hsla(15,100,2,.8);
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     max-width: initial;
     display: inline-block;
+    border-top: 1px solid hsla(15,100,1,.9);
 }
 .footer-text {
     color: scale-color($primary-color, $lightness: -50%);   
@@ -155,7 +156,11 @@
 }
 .footer-claim {
    position: relative;
-   top: 170px;
-   left: 200px;
-
+   padding-top: 200px;
+}
+.shadowed {
+    -webkit-filter: drop-shadow(12px 12px 25px rgba(0,0,0,0.5));
+    filter: url(#drop-shadow);
+    -ms-filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
+    filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=12, OffY=12, Color='#444')";
 }
